Resolve #61: Allow scrolling in case of study participant list overflow; increase max height

--- a/src/components/study-editor/study-editor.scss
+++ b/src/components/study-editor/study-editor.scss
@@ -1,6 +1,7 @@
 study-editor {
   display: block;
-  max-height: 50em;
+  max-height: 100em;
+  overflow: auto;
 
   // TODO: collect in file shared with other editor components
   &.deleted {
